fixed z-index root and body

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,14 @@ body {
     linear-gradient(rgba(18, 23, 37, .90), rgba(18, 23, 37, .90)),
     url(./assets/mobile/image-host.jpg) no-repeat;
   background-size: cover;
+  z-index: -2;
+}
+
+#root {
+  position: relative; /* Si es necesario */
+  z-index: -3; /* Restablece cualquier z-index no deseado */
+  width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 768px){
